<resources>
    <string name="app_name">Endocontrol</string>
    <string name="app_in_name">Endocontrol</string>
    <string name="previous"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name_after">Register App</string>
    <string name="text_bottom">Enter your account</string>
    <string name="button_sign_in">Sing In</string>
    <string name="button_register">Register</string>
    <string name="register_window_email">Email</string>
    <string name="register_window_pass">Password</string>
    <string name="register_window_name">Name</string>
    <string name="register_window_phone">Phone Number</string>
</resources>