<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="35sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name" />
        <TextView
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name_after" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textColor="@color/text_bottom"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_bottom" />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSingIn"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_sign_in"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:text="@string/button_sign_in" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_register"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:text="@string/button_register" />
    </LinearLayout>

</RelativeLayout>